// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MarcoLegal · P2-5 objetivos institucionales > vista ciudadana — snapshot 1`] = `
<div>
  <p
    class="text-[10px] uppercase tracking-[0.06em] text-[#A8A49C] mb-3"
  >
    S4.5 — Marco legal (vista ciudadana)
  </p>
  <h2
    class="font-serif text-[24px] text-[#1C1B18] mb-2"
  >
    Leyes locales y programa de limpia
  </h2>
  <p
    aria-live="polite"
    class="text-[11px] leading-snug text-[#8A857C] mb-3"
  >
    Ámbito modelado: San Pedro Garza García (único municipio en programa).
  </p>
  <p
    class="text-[13px] text-[#6B6760] mb-6 max-w-2xl leading-relaxed"
  >
    Cada municipio opera su propio reglamento de limpia. La zona metropolitana coordina —no sustituye al ayuntamiento. Lo que lees aquí resume el marco local en lenguaje claro.
  </p>
  <div
    class="mb-6 rounded-[10px] border border-[#D4881E]/30 bg-[#FEF7E7] p-4"
  >
    <p
      class="text-[12px] font-medium text-[#1C1B18] mb-1"
    >
      Vista educativa
    </p>
    <p
      class="mt-1 text-[12px] leading-relaxed text-[#6B6760]"
    >
      Esta pantalla orienta —no reemplaza el Periódico Oficial, la ventanilla municipal ni un parecer jurídico. Trámites y sanciones siguen el reglamento publicado de tu territorio.
    </p>
  </div>
  <div
    class="mb-6"
  >
    <p
      class="text-[11px] font-medium text-[#6B6760] mb-3"
    >
      Etapas habituales de un programa municipal
    </p>
    <p
      class="mb-3 text-[12px] text-[#6B6760] leading-relaxed"
    >
      Los equipos avanzan por fases parecidas a estas. La lista es guía conceptual —no un checklist legal.
    </p>
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="flex items-start gap-3 px-4 py-3 rounded-[10px] border border-[#D4881E]/40 bg-[#FEF7E7]"
      >
        <span
          class="font-mono text-[11px] px-2 py-0.5 rounded-full shrink-0 bg-[#D4881E] text-white"
        >
          F
          1
        </span>
        <div>
          <p
            class="text-[12px] font-medium text-[#1C1B18]"
          >
            Alineación institucional y jurídica
          </p>
          <p
            class="text-[11px] text-[#6B6760]"
          >
            0–6
             meses · 
            Reforma reglamentaria aprobada
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-3 px-4 py-3 rounded-[10px] border border-[#E8E4DC] bg-[#FDFCFA]"
      >
        <span
          class="font-mono text-[11px] px-2 py-0.5 rounded-full shrink-0 bg-[#E2DED6] text-[#6B6760]"
        >
          F
          2
        </span>
        <div>
          <p
            class="text-[12px] font-medium text-[#1C1B18]"
          >
            Negociación y pacto con concesionario
          </p>
          <p
            class="text-[11px] text-[#6B6760]"
          >
            4–9
             meses · 
            Instrumento contractual firmado con el concesionario
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-3 px-4 py-3 rounded-[10px] border border-[#E8E4DC] bg-[#FDFCFA]"
      >
        <span
          class="font-mono text-[11px] px-2 py-0.5 rounded-full shrink-0 bg-[#E2DED6] text-[#6B6760]"
        >
          F
          3
        </span>
        <div>
          <p
            class="text-[12px] font-medium text-[#1C1B18]"
          >
            Despliegue de infraestructura
          </p>
          <p
            class="text-[11px] text-[#6B6760]"
          >
            9–18
             meses · 
            Red de centros de acopio en despliegue conforme al plan
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-3 px-4 py-3 rounded-[10px] border border-[#E8E4DC] bg-[#FDFCFA]"
      >
        <span
          class="font-mono text-[11px] px-2 py-0.5 rounded-full shrink-0 bg-[#E2DED6] text-[#6B6760]"
        >
          F
          4
        </span>
        <div>
          <p
            class="text-[12px] font-medium text-[#1C1B18]"
          >
            Arranque y operación del piloto
          </p>
          <p
            class="text-[11px] text-[#6B6760]"
          >
            18–24
             meses · 
            Indicadores del piloto consolidados y validados
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-3 px-4 py-3 rounded-[10px] border border-[#E8E4DC] bg-[#FDFCFA]"
      >
        <span
          class="font-mono text-[11px] px-2 py-0.5 rounded-full shrink-0 bg-[#E2DED6] text-[#6B6760]"
        >
          F
          5
        </span>
        <div>
          <p
            class="text-[12px] font-medium text-[#1C1B18]"
          >
            Evaluación y escalamiento
          </p>
          <p
            class="text-[11px] text-[#6B6760]"
          >
            24–36
             meses · 
            Cobertura metropolitana del servicio en fase de consolidación
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MarcoLegal · P2-5 objetivos institucionales > vista funcionario — snapshot 1`] = `
<div>
  <p
    class="text-[10px] uppercase tracking-[0.06em] text-[#A8A49C] mb-3"
  >
    S4.5 — Marco legal y reforma reglamentaria
  </p>
  <h2
    class="font-serif text-[24px] text-[#1C1B18] mb-2"
  >
    Reforma reglamentaria
  </h2>
  <p
    aria-live="polite"
    class="text-[11px] leading-snug text-[#8A857C] mb-3 max-w-2xl"
  >
    Ámbito modelado: San Pedro Garza García (único municipio en programa).
  </p>
  <p
    class="text-[13px] text-[#6B6760] mb-6 max-w-2xl"
  >
    Esta vista produce expediente técnico de respaldo; no reemplaza el parecer de autoridad competente ni la aprobación formal de reformas. Es el mismo insumo que un equipo jurídico municipal puede usar para redactar la iniciativa y presentarla ante Cabildo.
  </p>
  <div
    class="mb-6 rounded-[12px] border border-[#E8E4DC] bg-[#F8F6F1] p-5"
  >
    <p
      class="text-[11px] uppercase tracking-[0.06em] text-[#A8A49C] mb-2"
    >
      Estado normativo actual
    </p>
    <p
      class="inline-flex rounded-full px-2.5 py-1 text-[11px] font-medium mb-3 bg-[#FEF7E7] text-[#8B5A00]"
    >
      En regularización jurídica
    </p>
    <p
      class="text-[13px] leading-relaxed text-[#6B6760] mb-4"
    >
      Aquí se contrasta el reglamento vigente con los adendos propuestos. Esta vista es informativa: no requiere validaciones manuales ni checklist de avance para continuar en el simulador.
    </p>
    <p
      class="text-[11px] font-medium text-[#6B6760] mb-2"
    >
      Acciones requeridas por fase
    </p>
    <ul
      class="space-y-2 mb-4"
    >
      <li
        class="rounded-[8px] border border-[#E8E4DC] bg-[#FDFCFA] px-3 py-2"
      >
        <p
          class="text-[12px] text-[#1C1B18]"
        >
          <span
            class="font-mono text-[#6B6760]"
          >
            F
            1
          </span>
           · 
          Alineación institucional y jurídica
        </p>
        <p
          class="text-[11px] text-[#6B6760]"
        >
          0–6
           meses · 
          Reforma reglamentaria aprobada
        </p>
      </li>
      <li
        class="rounded-[8px] border border-[#E8E4DC] bg-[#FDFCFA] px-3 py-2"
      >
        <p
          class="text-[12px] text-[#1C1B18]"
        >
          <span
            class="font-mono text-[#6B6760]"
          >
            F
            2
          </span>
           · 
          Negociación y pacto con concesionario
        </p>
        <p
          class="text-[11px] text-[#6B6760]"
        >
          4–9
           meses · 
          Instrumento contractual firmado con el concesionario
        </p>
      </li>
      <li
        class="rounded-[8px] border border-[#E8E4DC] bg-[#FDFCFA] px-3 py-2"
      >
        <p
          class="text-[12px] text-[#1C1B18]"
        >
          <span
            class="font-mono text-[#6B6760]"
          >
            F
            3
          </span>
           · 
          Despliegue de infraestructura
        </p>
        <p
          class="text-[11px] text-[#6B6760]"
        >
          9–18
           meses · 
          Red de centros de acopio en despliegue conforme al plan
        </p>
      </li>
      <li
        class="rounded-[8px] border border-[#E8E4DC] bg-[#FDFCFA] px-3 py-2"
      >
        <p
          class="text-[12px] text-[#1C1B18]"
        >
          <span
            class="font-mono text-[#6B6760]"
          >
            F
            4
          </span>
           · 
          Arranque y operación del piloto
        </p>
        <p
          class="text-[11px] text-[#6B6760]"
        >
          18–24
           meses · 
          Indicadores del piloto consolidados y validados
        </p>
      </li>
      <li
        class="rounded-[8px] border border-[#E8E4DC] bg-[#FDFCFA] px-3 py-2"
      >
        <p
          class="text-[12px] text-[#1C1B18]"
        >
          <span
            class="font-mono text-[#6B6760]"
          >
            F
            5
          </span>
           · 
          Evaluación y escalamiento
        </p>
        <p
          class="text-[11px] text-[#6B6760]"
        >
          24–36
           meses · 
          Cobertura metropolitana del servicio en fase de consolidación
        </p>
      </li>
    </ul>
    <button
      class="inline-flex items-center gap-1.5 rounded-[8px] bg-[#3B6D11] px-3 py-2 text-[12px] font-medium text-white hover:bg-[#2D5409] transition-colors"
      type="button"
    >
      Ver adendos jurídicos
      <svg
        class="w-3.5 h-3.5"
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</div>
`;
